# maybe_this_can_work

./: CMakeLists.txt  Readme.txt
include_riginal/: rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  sfcn_bridge.h  simulink_model_closedloop.h  simulink_model_closedloop_private.h  simulink_model_closedloop_types.h
src/: ert_main.c
